# djLibraryAmp

./: .gitignore  README.md  pyproject.toml
docs/: TECHNICAL.md
src/djlibraryamp/: __init__.py  cli.py  organizer.py  tags.py
tests/: __init__.py  conftest.py  test_organizer.py  test_tags.py
