[project]
name = "djlibraryamp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "mutagen>=1.47",
]

[project.scripts]
djlibraryamp = "djlibraryamp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/djlibraryamp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
